[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-sanity"
version = "0.1.0"
description = "Check repos for dumb mistakes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
repo_sanity = "repo_sanity.cli:main"

[tool.setuptools.packages.find]
include = ["repo_sanity*"]
